test/fail/varargs-pattern-many.grace
method name(*params : type { no }) {}

name(object {
  method no {}
}, object {}, object {
  method no {}
})
